[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["MakMemEng <yatani.mems4568@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"

ipykernel = "6.22.0"
ipython = "8.12.0"
jupyterlab = "3.6.3"
numpy = "*"
pandas = "2.0.0"
Pillow = "9.5.0"
pip = "23.1.1"
polars = "0.17.5"
pyarrow = "11.0.0"
pytest = "6.2.5"
scikit-learn = "1.2.2"
scipy = "1.9.3"
seaborn = "0.12.2"
tensorflow = {version = ">=2.9.1", markers = "sys_platform != 'darwin'"}
tensorflow-macos = {version = ">=2.9.1", markers = "sys_platform == 'darwin'"}
python-multipart = "^0.0.6"
mlflow = "^1.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
